# netflow_classification

./: .gitignore  CMakeLists.txt  Makefile  README.md  apta.cpp  dfs.cpp  evaluate.cpp  extract_dataset.py  gitversion.cpp  inputdata.cpp  islands.py  lsh.cpp  lsh.h  lsh2.cpp  lsh2.h  lsh3.cpp  lsh3.h  main.cpp  my_solution.txt  parameters.cpp  plot_results.py  requirements.txt  resultfile.txt  run_one_class_svm.py  spice.ranking  state_merger.cpp  stream.cpp  trigram.py
data_discretization/: connection_ctu_discretization.py  connection_ctu_discretization_1000_500.py  connection_ctu_discretization_100_50.py  connection_ctu_discretization_1200_600.py  connection_ctu_discretization_1500_750.py  connection_ctu_discretization_300_150.py  connection_ctu_discretization_500_250.py  connection_ctu_discretization_700_350.py  connection_ctu_discretization_fixed_len.py  connection_ctu_discretization_flex.py  connection_ids_discretization.py  ctu_data_discretization.py  experimental.py  ids_discretization.py  iot_discretization.py  median_connection_ctu_discretization.py  median_connection_ctu_discretization_1000_500.py  median_connection_ctu_discretization_100_50.py  median_connection_ctu_discretization_500_250.py  median_connection_ids_discretization.py  median_connection_ids_discretization_100_50.py  median_ctu_discretization.py  median_ctu_discretization_chris.py  read_all_ctu.py
data_encoding/: host_ctu_encoding_fixed_len.py
lsh/: CMakeLists.txt  rbs_experiement.cpp  run_lsh.cpp  run_lsh_2.cpp
lsh/include/: basicbenchmark.h  basis.h  matrix.h  psd_lsh.h  rbs_lsh.h  rh_lsh.h
(+131 files in other folders)
